--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.2", 
+    "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
     "expo-linear-gradient": "~11.4.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-axios": "^0.17.1",
     "react-native-calendars": "^1.1289.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.0.0-rc.5",
@@ -29,8 +32,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "twrnc": "^3.4.0",
-    "expo-splash-screen": "~0.16.2"
+    "twrnc": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
