--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.4.2",
+    "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
