--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "twrnc": "^3.4.0"
+    "twrnc": "^3.4.0",
+    "@expo/webpack-config": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
