--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.4.6",
+    "@react-native-picker/picker": "2.4.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.12",
