--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/datetimepicker": "^6.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -30,8 +31,11 @@
     "react-native": "0.69.6",
     "react-native-axios": "^0.17.1",
     "react-native-calendars": "^1.1289.0",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.0.0-rc.5",
+    "react-native-paper-dates": "^0.9.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
