--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "twrnc": "^3.4.0"
+    "twrnc": "^3.4.0",
+    "@react-native-masked-view/masked-view": "0.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
