--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-community/datetimepicker": "^6.5.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "0.2.7",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.4.4",
@@ -34,6 +35,7 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.0.0-rc.5",
     "react-native-paper-dates": "^0.9.2",
     "react-native-reanimated": "~2.9.1",
@@ -41,8 +43,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "twrnc": "^3.4.0",
-    "@react-native-masked-view/masked-view": "0.2.7"
+    "twrnc": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
